--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1002,3 +1002,28 @@ p.author-blurb{
 div.mailing-list input {
   font-size: 20px;
 }
+
+.text-body h2,h3,h4 {
+  margin-top:20px;
+}
+
+.text-body h2{
+  font-size:20px;
+}
+
+.text-body h3{
+  font-size:18px;
+}
+
+.text-body h4{
+  font-size:16px;
+}
+
+.text-body p,ul,li {
+  margin-top: 10px;
+  font-weight: 300;
+}
+
+.text-body strong {
+  font-weight: 600;
+}
