--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1027,3 +1027,13 @@ div.mailing-list input {
 .text-body strong {
   font-weight: 600;
 }
+
+div.center {
+  text-align: center;
+}
+
+.formkit-form {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+}
